Added APM config