@@ -1,10 +1,12 @@
-FROM maven:3.8.3-openjdk-17 as BUILD
+FROM maven:3.8-eclipse-temurin-18 as BUILD
 
 COPY src /usr/src/myapp/src
 COPY pom.xml /usr/src/myapp
 RUN mvn -f /usr/src/myapp/pom.xml clean package
 
-FROM openjdk:17-alpine as RUNNING
+FROM openjdk:18-alpine as running
 
-COPY --from=BUILD /usr/src/myapp/target/smart-organizr-1.0.0-SNAPSHOT.jar /smartOrganizr.jar
-ENTRYPOINT ["java","-jar","/library.jar"]
+EXPOSE 8080
+
+COPY --from=BUILD /usr/src/myapp/target/smart-organizr-*.jar /smartOrganizr.jar
+ENTRYPOINT ["java","-jar","/smartOrganizr.jar","--add-opens java.base/java.lang=ALL-UNNAMED"]
